--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "initdb/javiermanga",
+    "name": "javiermanga/initdb",
     "version": "1.0.0",
     "description": "U",
     "type": "library",
