--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Javier Manga",
-            "email": "jmangabloonde@gmail.com"
+            "email": "javimanga93@gmail.com"
         }
     ],
     "require": {}
