--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,20 @@
 {
-    "name": "javiermanga/initdb",
-    "version": "1.0.0",
-    "description": "U",
-    "type": "library",
-    "authors": [
-        {
-            "name": "Javier Manga",
-            "email": "javimanga93@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "javimanga/initdb",
+  "version": "1.0.0",
+  "description": "U",
+  "type": "library",
+  "authors": [
+    {
+      "name": "Javier Manga",
+      "email": "javimanga93@gmail.com"
+    }
+  ],
+  "require": {
+    "php": ">=7.2"
+  },
+  "autoload": {
+    "psr-0": {
+      "javimanga/initdb": "src/"
+    }
+  }
 }
