--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "U",
   "type": "library",
-  "license": "Ki11Z0n3",
+  "license": "MIT",
   "authors": [
     {
       "name": "Javier Manga",
