--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "php": ">=7.2"
+    "php": ">=7.2",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {"JaviManga\\InitDB\\": "src/"}
